<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- 销售 -->
    <string name="app_name">销售</string>
    <string name="shou_yin_tai">收银台</string>
    <string name="sale_menu">销售单</string>
    <string name="sale_menu_detail">销售清单</string>
    <string name="online_menu">线上订单</string>
    <string name="online_menu_detail">线上订单详情</string>
    <string name="instock_menu">入库单</string>
    <string name="instock_menu_detai">入库单详情</string>
    <string name="outstock_menu">出库单</string>
    <string name="outstock_menu_detail">出库单详情</string>
    <string name="shopping_stock">商品库存</string>
    <string name="shopping_stock_detail">商品库存详情</string>
    <string name="account_stock_menu_detai">盘点单详情</string>
    <string name="account_stock_menu">盘点单</string>
    <string name="shopping_sale_amount">商品销售汇总</string>
    <string name="shopping_sale_amount_detail">商品销售汇总详情</string>
    <string name="setting_title">设置</string>
    <string name="quert_title">查询</string>
    <string name="manage_title">管理</string>
    <string name="input_stock">入库</string>
    <string name="output_stock">出库</string>
    <string name="account">盘点</string>
    <string name="cashier_desk">收银台</string>
    <string name="net_print">网络打印机</string>
    <string name="offline_syn_data">离线数据同步</string>
    <string name="point_menu">点单</string>
    <string name="choose_table">选桌</string>
    <string name="printer_setting">打印机设置</string>
    <string name="bussiness_sets">商务套餐</string>
    <string name="category_name">咖喱鸡块+小炒+食素</string>
    <string name="amount">14元</string>
    <string name="amount_with">￥14.00</string>
    <string name="address">张三 13152678904\n 无锡市惠山区智慧路O-park大厦</string>
    <string name="unit">/斤</string>
    <string name="unit_with_yuan">元/例</string>
    <string name="mount">1</string>
    <string name="dinner_hall">堂食</string>
    <string name="take_away">外卖</string>
    <string name="sale_menu_item">销售清单</string>
    <string name="go_account">结账</string>
    <string name="check_out">下单</string>
    <string name="order_amount">订单总额：</string>
    <string name="take_away_address">外卖地址：</string>
    <string name="bei_zhu">其它备注</string>
    <string name="category_menu">菜品清单</string>
    <string name="go_back">返回</string>
    <string name="single_num">单号：</string>
    <string name="amount_example">￥100.00</string>
    <string name="account_example">0</string>
    <string name="count_amount">总计：</string>
    <string name="trans_type">交易类型：</string>
    <string name="time_range">时间范围：</string>
    <string name="trans_time">交易日期：</string>
    <string name="sale_code">销售单号：</string>
    <string name="wait_for_pay">待支付</string>
    <string name="payment_time">下单时间：</string>
    <string name="payment_content">订单内容：</string>
    <string name="jin_e">金额：</string>
    <string name="go_pay">去结账</string>
    <string name="table_title">001桌</string>
    <string name="member_card">会员卡</string>
	<string name="shuaka">刷卡</string>
	<string name="shoushu">手输</string>
  	<string name="scan_qrcode">扫一扫</string>
	<string name="IC_card">IC卡</string>
	<string name="duizhun_two_code">将取景器对准二维码</string>
	<string name="auto_scan">即可自动扫描</string>
	<string name="swipe_card">请刷卡</string>
	<string name="tip_input_by_hand">请输入会员卡号</string>
	<string name="tip_contactless_card">请将卡放入感应区</string>
	<string name="print_type">型号：</string>
	<string name="ip_one">IP1：</string>
	<string name="ip_two">IP2：</string>
	<string name="merchant_code">商户代码：</string>
	<string name="terminal_code">终端编号：</string>
	<string name="password">密钥：</string>
	<string name="rui_gong_printer">瑞工打印</string>
	<string name="fei_yin_printer">飞印打印</string>
	<string name="qi_yong_fei_yin">启用飞印</string>
	<string name="make_sure">确定</string>
</resources>
