<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/title_background"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/gray" >

    <ImageView
        android:id="@+id/btn_back_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/btn_back" />

    <TextView
        android:id="@+id/text_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/btn_back_menu"
        android:alpha="0.3"
        android:text="@string/go_back"
        android:textColor="#000" />

    <Button
        android:id="@+id/btn_go_menu"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/btn_orange"
        android:text="@string/check_out"
        android:textColor="@color/whites"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/btn_go_menu"
        android:text="@string/amount_example"
        android:textColor="@color/orange" />

</RelativeLayout>