<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whites"
    android:clickable="false"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_code" />

            <TextView
                android:id="@+id/tv_sale_serial_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2015052000002" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />
        <!--时间内容条目  -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:text="@string/payment_time"
                />
            <TextView
                android:id="@+id/trans_time" 
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="2015-5-20 14:08:23"
                />
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:text="@string/payment_content"
                />
            <TextView
                android:id="@+id/tv_payment_content" 
                android:layout_marginLeft="5dp"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="2015-5-20 14:08:23"
                />
        </LinearLayout>
         <LinearLayout
             android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />
        <!--金额与结账  -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jin_e"/>
            <TextView 
                android:id="@+id/tv_wait_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:text="@string/amount_example"/>
            <Button
                android:id="@+id/go_pay"
                android:layout_marginLeft="140dp"
                android:layout_width="60dp"
                android:layout_marginRight="10dp"
                android:layout_height="25dp"
                android:background="@drawable/input_s"
                android:textSize="12sp"
                android:textColor="@color/blue"
                android:text="@string/go_pay"/>
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>