<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:clickable="false"
    android:background="@color/whites"
    android:gravity="center_vertical"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_category_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/icon"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_category_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/category_name"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/amount"
                    android:textColor="@color/orange"
                    android:textSize="12sp" />
                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/tv_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/unit"
                    android:textColor="#000"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="right"
                    android:layout_height="wrap_content" >
                        <Button 
                            android:id="@+id/btn_detail_sub"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/btn_selector_sub"/>
                        <TextView 
                            android:id="@+id/tv_mount"
                            android:layout_marginTop="-5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mount"
                            android:textSize="12sp"
                            />
                          <Button 
                            android:layout_marginLeft="10dp"
                            android:id="@+id/btn_detai_add"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/btn_selector_add"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>