<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.wizarpos.barcode.scanner.ScannerRelativeLayout
        android:id="@+id/re_scanner_two_dimension_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="-220dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/duizhun_two_code"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_scan"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:background="@drawable/topleft" />

        <ImageView
   			android:layout_alignParentTop="true"
   			android:layout_alignParentRight="true"
            android:contentDescription="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/topright" />

        <ImageView
            android:layout_marginTop="200dp"
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"
            android:background="@drawable/bottomleft" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="200dp"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"
            android:background="@drawable/bottomright" />
    </RelativeLayout>
</FrameLayout>
